--- a/style.css
+++ b/style.css
@@ -61,10 +61,22 @@ input{
     margin: 5px;
     
 }
-/*calculate  button */
+/*calculatenand reset  button */
 #calc{
     height:40px;
-    width:100%;
+    width:50%;
+    border:none;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: rgb(233, 11, 85);
+    color: white;
+    font-weight: 500;
+    font-size: large;
+
+}
+#rst{
+    height:40px;
+    width:49%;
     border:none;
     border-radius: 10px;
     padding: 5px;
