--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ input{
 
 /* health status */
 .para{
-    background-color: white;
+    background-color: whitesmoke;
     height:65px ;
     width: 165px;
     margin-left: 170px; 
